# cc-synthesizer

./: CLAUDE.md  README.md  pyproject.toml
.claude/reference/: citations-format.md  summary-format.md  synthesis-format.md
.claude/skills/build-html/: SKILL.md
.claude/skills/cleanup-pdf-names/: SKILL.md
.claude/skills/create-synthesis/: SKILL.md
.claude/skills/export-synthesis/: SKILL.md
.claude/skills/launch-synthesis/: SKILL.md
.claude/skills/summarize-documents/: SKILL.md
docs/: README.md  getting-started.md  skills-reference.md
docs/superpowers/plans/: 2026-03-19-cc-synthesizer-phase1.md  2026-03-20-markdown-citation-refactor.md
docs/superpowers/specs/: 2026-03-19-pdf-synthesizer-design.md  2026-03-20-markdown-citation-refactor-design.md
scripts/: build_html.py
server/: main.py
summaries/: README.md
tests/: test_build_html.py
