[project]
name = "cc-synthesizer"
version = "0.1.0"
description = "Claude Code skill pipeline for PDF ingestion and interactive synthesis"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "markdown-it-py>=3.0.0",
    "uvicorn[standard]>=0.29",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
